# afc-sds

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pom.xml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  live-api-check.yml
app/: config.py  dependencies.py  main.py
app/api/v1/: extract.py  router.py  schema.py
app/core/: exceptions.py  logging.py
app/schemas/: common.py  responses.py  sds.py
app/services/: claude_client.py  extraction_service.py  postvalidation.py  prompts.py
app/validation/: file_validation.py
docs/: openapi.yaml
src/main/java/jp/co/ajs/afcsds/: AfcSdsApplication.java
src/main/java/jp/co/ajs/afcsds/api/: ExtractController.java  HealthController.java  SchemaController.java
src/main/java/jp/co/ajs/afcsds/config/: AppSettings.java  WebConfig.java
src/main/java/jp/co/ajs/afcsds/core/: AppException.java  AppExceptions.java  AppLogs.java  JsonLogLayout.java
src/main/resources/: application.yml  logback.xml  sds_json_schema.json
src/test/java/jp/co/ajs/afcsds/: TestFixtures.java
src/test/resources/fixtures/: maximal_sds_payload.json  schema_snapshot.json
tests/: conftest.py  factories.py  test_api_auth.py  test_api_extract_endpoint.py  test_api_schema_endpoint.py  test_config.py  test_extraction_service.py  test_file_validation.py  test_postvalidation.py  test_prompts.py  test_request_context.py  test_schema.py
tests/fixtures/real_world/: README.md
tests/integration/: test_live_extraction.py  test_real_world_extraction.py
(+31 files in other folders)
