[project]
name = "afc-sds"
version = "0.1.0"
description = "SDS (安全データシート) AI-OCR JSON extraction API powered by Claude"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.68",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: requires a real ANTHROPIC_API_KEY and RUN_INTEGRATION=1",
]
